Drawing hybrid meshes

--- a/doc/devel_rules/devel_rules.tex
+++ b/doc/devel_rules/devel_rules.tex
@@ -95,7 +95,7 @@
   This declaration was making my code compile even though I did not expect that it would compile.
   
 
-\chapter{ccmake vs. cmake-gui}
+\chapter{cmake vs. ccmake vs. cmake-gui}
 
 
 \part{Library}
