Created more hybrid meshes to test soon

--- a/doc/devel_rules/devel_rules.tex
+++ b/doc/devel_rules/devel_rules.tex
@@ -454,6 +454,15 @@ When you explode adjacent faces, the edges are called differently... we should i
   
  
   \chapter{Procedure: hybrid meshes}
+  
+  I am not sure that the available algorithms allow HYBRID meshes.
+  
+  The only possibility that I see is 
+  
+  - to create Sub-Meshes of a Mesh;
+  
+  - to have only one type of geometric element in each Sub-Mesh
+  
 
  
  
@@ -464,6 +473,10 @@ When you explode adjacent faces, the edges are called differently... we should i
   Do we need to do it now or can we postpone it right before exporting the MED file?
   
   I think it is the same
+  
+  \section{It can be done only on a Mesh or Sub-mesh}
+  
+  
   
   
   \chapter{Procedure: Mesh operations (avoid, whenever possible)}
