Understanding how to run py scripts in Salome from terminala

--- a/doc/devel_rules/devel_rules.tex
+++ b/doc/devel_rules/devel_rules.tex
@@ -193,6 +193,8 @@ The "Failed to narrow the root naming context"
 is an error displayed when there is no entry in /etc/hosts 
 corresponding to your hostname. So, you need to add the output of the command
  ``hostname'' to that file!
+ 
+
 
 \chapter{How to save/open your work}
 
@@ -209,6 +211,24 @@ corresponding to your hostname. So, you need to add the output of the command
     Remove them manually.
   
   
+ 
+\chapter{How to run}
+
+ You can run salome in GUI mode or also in terminal mode
+
+ \section{GUI mode}
+  
+ salome start study.hdf
+ 
+ salome start study.py
+
+ \section{TUI mode}
+ 
+ salome start -t study.hdf
+ 
+ salome start -t study.py
+ 
+ 
   
   
  \chapter{Procedure: Geometry and Mesh}
